adding comments in the code

--- a/Exercice 10 /index.html
+++ b/Exercice 10 /index.html
@@ -8,9 +8,9 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 <body>
-    <div id="Methode2" class="divD">Clic moi dessus</div>
+    <div id="Methode2" class="divD">Clic sur moi</div>
     <div id="Methode3" class="divD">Survole moi </div>
-    <div id="Methode4" class="divD"tabindex="0">Appui au clavier</div>
+    <div id="Methode4" class="divD"tabindex="0">Tape sur le clavier</div>
 </body>
 <script src='main10.js'></script>
 </html>
